--- a/css/style.css
+++ b/css/style.css
@@ -197,28 +197,42 @@ img {
   margin: 0 auto 30px;
 }
 
-.footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 200px;
-}
-
-.footer a {
+/* Footer */
+#main-footer {
+  background: var(--dark-color);
   color: #fff;
 }
 
-.footer a:hover {
-  color: #28a745;
+#main-footer img {
+  width: 150px;
 }
 
-.footer .social > * {
-  margin-right: 30px;
+#main-footer a {
+  color: #fff;
 }
-.footer p {
-  margin-top: 10px;
+
+#main-footer .footer-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1.5rem;
+}
+
+#main-footer .footer-container > *:last-child {
+  background: #444;
+  grid-column: 1 / span 4;
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 0.75rem;
+}
+
+#main-footer .footer-container input[type="email"] {
+  width: 90%;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+#main-footer .footer-container input[type="submit"] {
+  width: 90%;
 }
 
 /* Mobile */
